// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<style>
.IS1 {
  text-decoration: underline;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 15px;
  color: #006699;
  text-decoration-line: none;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan IS1"
    href="/profile/alexandra-frean"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`2. with a very long byline 1`] = `
<style>
.IS1 {
  text-decoration: underline;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 15px;
  color: #006699;
  text-decoration-line: none;
}

.IS2 {
  text-decoration: underline;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 15px;
  color: #006699;
  text-decoration-line: none;
}

.IS3 {
  text-decoration: underline;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 15px;
  color: #006699;
  text-decoration-line: none;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan IS1"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , Environment Editor | 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan IS2"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , Environment Editor | 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan IS3"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , Environment Editor
  </div>
</div>
`;
